--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+
+body {
+  font-family: Arial, sans-serif;
+  background: #fff;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+  color: #c33b80;
+}
+
+.semestre {
+  margin-bottom: 30px;
+}
+
+.semestre h2 {
+  color: #c33b80;
+}
+
 .ramo {
   display: inline-block;
   background-color: #ffa8d9;
